[FUNCTIONAL TESTS(U)]
pom.xml and pom-server.xml file content update